hr_deploy/23.02.09t/3-Service/hr-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: hr-db-svc
  annotations:
spec:
  selector:
    app: hr
  type: NodePort
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
